--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3"
 services:
   chatBot:
-    image: runyanjake/chatBot
+    image: runyanjake/chatbot
     cointainer_name: chatbot_whitney
     restart: always
     build: .
