--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3"
 services:
   chatbot:
-    image: runyanjake/chatbot
+    image: tobeeandmaymay/chatbot
     container_name: chatbot_whitney
     restart: always
     build: .
